# HermesNetwork

./: CMakeLists.txt  HermesNetwork.h  HermesNetworkReworked.h  README.md
HermesNetworkInspector/: CMakeLists.txt  PingPongDemo.h  main.cpp
HermesNetworkInspector/Dependencies/: .gitignore  CMakeLists.txt
models/: AND  NAND  NOR  OR  XNOR  XOR
